# TruMetraPla

./: .gitignore  LICENSE  README.md  TruMetraPla.spec  pyproject.toml  trumetrapla.spec
.github/workflows/: sync-psite.yml
docs/: installazione-xubuntu.md  terminal-combos.md
installer/: Build-And-Run-TruMetraPla.bat  Build-Launch-TruMetraPla.bat  Build-TruMetraPla.bat  PyBuild-And-Run-TruMetraPla.bat  Setup-TruMetraPla.bat  Setup-TruMetraPla.ps1  TruMetraPla-Installer.nsi  install-trumetrapla-xubuntu.sh  trumetrapla.nsi
src/trumetrapla/: __init__.py  __main__.py  cli.py  column_classifier.py  data_loader.py  gui.py  metrics.py  models.py  packaging.py  welcome_app.py
tests/: conftest.py  test_cli.py  test_data_loader.py  test_gui.py  test_metrics.py  test_packaging.py  test_welcome_app.py
