[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trumetrapla"
version = "0.1.0"
description = "Strumenti per analizzare la produttività dei processi metalmeccanici da file Excel"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "TruMetraPla Contributors"}
]
dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "click>=8.1",
    "matplotlib>=3.8"
]
license = {file = "LICENSE"}

[project.optional-dependencies]
test = [
    "pytest>=8.0"
]
build = [
    "pyinstaller>=6.10"
]

[project.scripts]
trumetrapla = "trumetrapla.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
